--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,9 +3,15 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+    <turbo-frame id="id-category">
+        <h1>Create new Category</h1>
 
-    {{ include('category/_form.html.twig') }}
+        {{ include('category/_form.html.twig') }}
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
+        {% for message in app.flashes('error') %}
+            <div class="error-message">{{ message }}</div>
+        {% endfor %}
+
+        <a href="{{ path('app_category_index') }}">back to list</a>
+    </turbo-frame>
 {% endblock %}
