--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <turbo-frame id="id-category">
+    <turbo-frame id="id_category">
         <h1>Create new Category</h1>
 
         {{ include('category/_form.html.twig') }}
