--- a/templates/editor/new.html.twig
+++ b/templates/editor/new.html.twig
@@ -3,9 +3,18 @@
 {% block title %}New Editor{% endblock %}
 
 {% block body %}
-    <h1>Create new Editor</h1>
+    <turbo-frame id="id_editor">
+        <h1>Create new Editor</h1>
 
-    {{ include('editor/_form.html.twig') }}
+        {{ include('editor/_form.html.twig') }}
 
-    <a href="{{ path('app_editor_index') }}">back to list</a>
+        {% for message in app.flashes('error') %}
+            <div class="error-message">{{ message }}</div>
+        {% endfor %}
+        {# {% for message in app.flashes('error2') %}
+            <div class="error-message">{{ message }}</div>
+        {% endfor %} #}
+
+        <a href="{{ path('app_editor_index') }}">back to list</a>
+    </turbo-frame>
 {% endblock %}
